--- a/programs/ranger/rc.conf
+++ b/programs/ranger/rc.conf
@@ -1,5 +1,5 @@
 set preview_images true
-set preview_images_method ueberzug
+set preview_images_method w3m
 set colorscheme default 
 set save_console_history true
 set draw_progress_bar_in_status_bar true
@@ -9,4 +9,6 @@ set cd_tab_fuzzy false
 alias e edit
 alias d delete
 
+map ñ delete
+map <C-r> reset
 default_linemode devicons
